--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://athletedecoded.com/resume"
+base_url = "https://athletedecoded.com"
 title = "Kahlia Hogg CV"
 description = "Kahlia Hogg CV"
 
